# KvDeveloper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
kvdeveloper/: __init__.py  __main__.py  build_config.py  cli.py  config.py  info_reader.py  module.py  utils.py
kvdeveloper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kvdeveloper/assets/css/: github-markdown.css
kvdeveloper/build_files/colab/: buildozer_action.ipynb
kvdeveloper/build_files/github/: buildozer_action.yml  buildozer_android_action.yml  buildozer_ios_action.yml
kvdeveloper/components/: __init__.py  factory_registers.py
kvdeveloper/components/ITDCard/: __init__.py  itdcard.kv  itdcard.py
kvdeveloper/components/LazyManager/: __init__.py  lazymanager.py
kvdeveloper/components/LoadingLayout/: __init__.py  loadinglayout.kv  loadinglayout.py
kvdeveloper/components/ResponsiveGrid/: __init__.py  responsive_grid.kv  responsive_grid.py
kvdeveloper/components/container/: __init__.py  container.kv  container.py
kvdeveloper/components/kivymd/Container/: container.kv  container.py
kvdeveloper/components/kivymd/ITDCard/: __init__.py
kvdeveloper/components/kivymd/LoadingLayout/: loadinglayout.py
kvdeveloper/components/kivymd/ResponsiveGrid/: responsive_grid.py
kvdeveloper/internals/firebase/: __init__.py
kvdeveloper/internals/server/: __init__.py
kvdeveloper/internals/sorting/: __init__.py
kvdeveloper/layouts/Auth/1/: auth_screen.kv
kvdeveloper/layouts/Home/1/: extensions.py  home_screen.kv
kvdeveloper/layouts/Home/2/: extensions.py  home_screen.kv
kvdeveloper/layouts/Home/3/: home_screen.kv
kvdeveloper/layouts/Settings/1/: extensions.py  settings_screen.kv
kvdeveloper/layouts/kivymd/Home/2/: extensions.py
kvdeveloper/layouts/kivymd/Home/3/: home_screen.kv
kvdeveloper/layouts/kivymd/Settings/1/: extensions.py
kvdeveloper/libs/: __init__.py
kvdeveloper/libs/PdfViewer/: __init__.py
kvdeveloper/libs/PdfViewer/Android/: __init__.py
kvdeveloper/libs/PdfViewer/iOS/: __init__.py
kvdeveloper/libs/Webview/Android/: __init__.py
kvdeveloper/structures/MVC/Model/: base_model.py
kvdeveloper/structures/MVC/Utility/: observer.py
kvdeveloper/templates/: default_component.py  default_screen.kv  default_screen.py  main.py  mainh.py
kvdeveloper/templates/base/: main.py  module_mappings.toml
kvdeveloper/templates/blank/: README.md  main.py  mainh.py  requirements.txt
kvdeveloper/templates/blank/View/: base_screen.kv  base_screen.py  screens.py
kvdeveloper/templates/blank/View/SampleScreen/: __init__.py  sample_screen.kv  sample_screen.py
kvdeveloper/templates/carbonkivy/: module_mappings.toml
kvdeveloper/templates/kivymd/: module_mappings.toml
kvdeveloper/templates/kivymd/nav_dock/: README.md  mainh.py
kvdeveloper/templates/kivymd/nav_dock/View/: screens.py
kvdeveloper/templates/kivymd/nav_dock/View/HomeScreen/: home_screen.kv
kvdeveloper/templates/kivymd/nav_toolbar/: README.md  main.py
kvdeveloper/templates/kivymd/nav_toolbar/View/: base_screen.kv  extensions.py
kvdeveloper/templates/kivymd/nav_toolbar/View/HomeScreen/: home_screen.kv
kvdeveloper/templates/kivymd/nav_toolbar/View/LoginScreen/: login_screen.kv
kvdeveloper/templates/nav_dock/: main.py  requirements.txt
kvdeveloper/templates/nav_dock/View/: base_screen.kv  base_screen.py  extensions.py  screens.py
kvdeveloper/templates/nav_dock/View/HomeScreen/: extensions.py  home_screen.kv  home_screen.py
kvdeveloper/templates/nav_toolbar/: README.md  main.py  mainh.py  requirements.txt
kvdeveloper/templates/nav_toolbar/View/: base_screen.kv  base_screen.py  extensions.py  screens.py
kvdeveloper/templates/nav_toolbar/View/Components/: components.kv
kvdeveloper/templates/nav_toolbar/View/HomeScreen/: __init__.py  home_screen.kv  home_screen.py
kvdeveloper/templates/nav_toolbar/View/LoginScreen/: __init__.py  login_screen.kv  login_screen.py
kvdeveloper/templates/p4a/: build.tmpl.gradle  gradle.json
kvdeveloper/templates/sortmappings/carbonkivy/: sortmap.toml
kvdeveloper/templates/sortmappings/kivymd/: sortmap.toml
kvdeveloper/view_base/: base_screen.py  buildozer.spec  config.toml  default_component.py  default_screen.kv  default_screen.py  home_screen.py  main.py  mainh.py  registers.py
