[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvdeveloper"
version = "2024.0.7"
dependencies = [
  "kivy>=2.2.0",
  "kivymd>=1.1.1",
  "pillow>=10.3.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "markdown2>=2.5.0",
  "pyqt5",
  "pyqtwebengine",
]
requires-python = ">=3.1"
authors = [
  {name = "Kartavya Shukla", email = "novfensec@protonmail.com"},
]
maintainers = [
  {name = "Kartavya Shukla", email = "novfensec@protonmail.com"},
]
description = "KvDeveloper is a PyPI module designed to streamline the development of Kivy and KivyMD applications. Inspired by Expo CLI for React Native, KvDeveloper provides starter templates and essential functionalities to kickstart your projects with ease."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["kivy", "open source", "kivymd", "kvdeveloper", "kartavya shukla", "android", "novfensec", "kv"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Novfensec/KvDeveloper"
Documentation = "https://readthedocs.org/KvDeveloper"
Repository = "https://github.com/Novfensec/KvDeveloper.git"
"Bug Tracker" = "https://github.com/Novfensec/KvDeveloper/issues"
Changelog = "https://github.com/Novfensec/KvDeveloper/blob/main/CHANGELOG.md"

[project.scripts]
kvdeveloper = "kvdeveloper.__main__:main"

[tool.setuptools.package-data]
"kvdeveloper" = [
  "assets/image_library/basic/*",
  "assets/image_library/kvdeveloper/*",
  "assets/css/*",
  "assets/js/*",
]

[tool.setuptools.exclude-package-data]
"kvdeveloper" = ["*.pyc", "*.pyo"]